# Discord-Bot

./: .gitignore  Procfile  main.py  pyproject.toml  requirements.txt  tests.py
app/: app.py  flask_app.py
app/static/styles/: index.css  userpage.css
app/templates/: base.html  dashboard.html  index.html  userpage.html
src/: agenda.py  bot.py  helpers.py  nick.py  notifier.py  pokemon.py  setup_vote.py  utils.py
